<resources>
    <string name="app_name">shoestore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="logo">The Logo</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="sign_up">Sign-up</string>
    <string name="sign_in">Sing-in</string>
    <string name="instructions">Instructions</string>
    <string name="login_title">Login</string>
    <string name="welcome_fragment">Welcome</string>
    <string name="hi">Hi, %s</string>
    <string name="welcome">Welcome to udacity shoe store!\n\nStep into a world of style and comfort. Discover the perfect pair of shoes that complements your unique personality. Whether you\'re on the hunt for the latest trends, timeless classics, or sports-specific footwear, we\'ve got you covered.\n\nOur extensive collection offers a wide range of choices for every occasion and every season. From elegant formal shoes to casual sneakers, from durable athletic shoes to chic heels, we have something for everyone.\n\nExplore our app to:\n\nBrowse our vast selection of footwear.\nFind your perfect fit with our size guide.\nStay updated on the latest arrivals and exclusive offers.\nSave your favorite styles to your wishlist.\nConveniently place orders and track their status.\nEnjoy a hassle-free shopping experience with our secure payment options.\nAt udacity shoe store, we\'re dedicated to providing you with not just shoes, but a style statement. We\'re here to make your shopping experience easy and enjoyable.\n\nThank you for choosing us for your footwear needs. Happy shopping!\"\n\nFeel free to customize this message to suit your shoe store\'s brand and unique selling points.</string>
    <string name="instructions_rules">1. Search and Browse:\n\nUse the search bar to find specific shoe styles, brands, or sizes.\nBrowse through categories and collections to discover new arrivals and trends.\n2. Product Details:\n\nTap on a shoe to view detailed product information.\nCheck available sizes, colors, and prices.\nRead customer reviews and ratings to make an informed decision.\n3. Sizing Guide:\n\nNot sure about your shoe size? Consult our sizing guide to find your perfect fit.\n4. Wishlist:\n\nSave your favorite shoes by adding them to your wishlist.\nEasily access and review them later.\n5. Exclusive Offers:\n\nStay updated on our latest promotions and special offers.\nKeep an eye out for limited-time discounts and deals.\n6. Secure Checkout:\n\nAdd items to your shopping cart and proceed to checkout when you\'re ready.\nChoose your preferred payment method and provide shipping details.\nYour personal and payment information is kept secure.\n7. Order Tracking:\n\nOnce your order is placed, you can track its status within the app.\nReceive notifications on the progress of your order.\n8. Customer Support:\n\nNeed assistance or have questions? Reach out to our customer support team through the app.\nWe\'re here to help with any inquiries or concerns.\n9. Feedback and Reviews:\n\nShare your feedback by leaving reviews for your purchased items.\nHelp others make informed choices based on your experiences.\n10. Stay Fashionable:\n\nFollow our social media links to stay in the loop on the latest fashion trends.\nBe inspired by styling tips and fashion advice.\n11. App Notifications:\n\nEnable app notifications to receive updates on order confirmations, shipping, and special promotions.\n12. Enjoy Shopping:\n\nMost importantly, have fun exploring our shoe store app!\nWe\'re here to make your shopping experience convenient and enjoyable.\n</string>
    <string name="show_shoe_list">Shoe List</string>
    <string name="shoe_list">Shoe List</string>
    <string name="show_details">Show Details</string>
    <string name="shoe_name">Shoe Name</string>
    <string name="enter_shoe_name">Enter Show Name</string>
    <string name="company">Company</string>
    <string name="enter_company">Enter Company Name</string>
    <string name="shoe_size">Size</string>
    <string name="enter_shoe_size">Enter Shoe Size</string>
    <string name="details">Details</string>
    <string name="enter_shoe_details">Enter Shoe Details</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="shoe_details">Shoe Details</string>
    <string name="one">1</string>
    <string name="logout">Logout</string>
</resources>