<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logoView"
            android:layout_width="183dp"
            android:layout_height="153dp"
            android:layout_marginTop="76dp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/shoe"
            tools:srcCompat="@drawable/shoe" />

        <TextView
            android:id="@+id/email_text"
            style="@style/label_style"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/abeezee"
            android:text="@string/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.631"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logoView" />

        <EditText
            android:id="@+id/email_edit"
            style="@style/edit_style"
            android:autofillHints=""
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_text"
            tools:ignore="VisualLintTextFieldSize" />

        <TextView
            android:id="@+id/password_text"
            style="@style/label_style"
            android:layout_width="394dp"
            android:layout_height="62dp"
            android:layout_marginTop="40dp"
            android:text="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_edit"
            tools:ignore="TextSizeCheck" />

        <EditText
            android:id="@+id/password_edit"
            style="@style/edit_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="#8D6E63"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_text"
            tools:ignore="VisualLintTextFieldSize" />

        <Button
            android:id="@+id/signup_button"
            style="@style/button_style"
            android:layout_marginStart="@dimen/margin_left"
            android:text="@string/sign_up"
            app:layout_constraintBaseline_toBaselineOf="@+id/signin_button"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/signin_button"
            android:layout_marginTop="128dp"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit"
            style="@style/button_style" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>