<?xml version="1.0" encoding="utf-8"?>
<!--I have used Linear layout in welcome_layout.xml because
it contains 3 views without complex constraints.  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/instruction_title"
            style="@style/label_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/label_margin"
            android:text="@string/instructions"
            android:textAlignment="center" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/instruction_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/label_padding"
                android:text="@string/instructions_rules"
                android:textAlignment="viewStart"
                android:textSize="20sp" />
        </ScrollView>

        <Button
            android:id="@+id/show_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_shoe_list"
            android:layout_marginTop="@dimen/label_margin"
            android:layout_marginEnd="@dimen/label_margin"
            android:layout_gravity="end"/>

    </LinearLayout>


</layout>
